[workspace]
resolver = "2"
members = [
    "crates/netpurr",
    "crates/cookie_store",
    "crates/reqwest_cookie_store",
    "crates/netpurr_core",
    "crates/netpurr_test_runner",
    "crates/egui_code_editor",
    "crates/egui-phosphor",
    "crates/egui_json_tree",
]

[workspace.package]
edition = "2021"
rust-version = "1.72"
version = "0.1.0"


[profile.release]
# lto = true # VERY slightly smaller wasm
# opt-level = 's' # 10-20% smaller wasm compared to `opt-level = 3`
# opt-level = 1 # very slow and big wasm. Don't do this.
opt-level = 2 # fast and small wasm, basically same as `opt-level = 's'`
# opt-level = 3 # unnecessarily large wasm for no performance gain
strip = true
lto = true
# debug = true # include debug symbols, useful when profiling wasm


[profile.dev]
# Can't leave this on by default, because it breaks the Windows build. Related: https://github.com/rust-lang/cargo/issues/4897
# split-debuginfo = "unpacked" # faster debug builds on mac
# opt-level = 1                # Make debug builds run faster

# Optimize all dependencies even in debug builds (does not affect workspace packages):
[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9.32"
strum = "0.26.2"
strum_macros = "0.26.2"
anyhow = "1.0"
rand = { version = "0.8" }
url = "2.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1.3"
dirs = "5.0.1"
regex = "1.10.2"
base64 = "0.22.0"
log = { version = "0.4", features = ["std"] }
poll-promise = { version = "0.3", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
egui = { version = "0.27.0", features = [
    "callstack",
    "extra_debug_asserts",
    "log",
] }
egui_extras = { version = "0.27.0", features = ["image", "syntect"] }
egui_plot = { version = "0.27.0" }
eframe = { version = "0.27.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
] }

futures-util = "0.3.29"
rayon = "1.10.0"
prettify-js = "=0.1.0"