[package]
name = "egui-phosphor"
description = "Phosphor icons for egui"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/amPerl/egui-phosphor"

[dependencies]
egui.workspace = true

[features]
default = ["regular"]
thin = []
light = []
regular = []
bold = []
fill = []
