[package]
name = "netpurr"
version = "1.0.0"
description = "This is a rest api request tools"
authors = ["Emil <jincheng.zhang@thoughtworks.com>"]
edition.workspace = true
rust-version.workspace = true
default-run = "netpurr"

[package.metadata.bundle]
name = "Netpurr"
identifier = "com.thoughtworks.netpurr"
icon = ["icon/icon256.png"]


[package.metadata.docs.rs]
all-features = true

[features]
default = ["glow", "http", "image_viewer"]
# image_viewer adds about 0.9 MB of WASM
http = ["image", "egui_extras/image"]
image_viewer = ["image", "egui_extras/all_loaders"]
glow = ["eframe/glow"]

[dependencies]
egui = { version = "0.25.0", features = [
    "callstack",
    "extra_debug_asserts",
    "log",
]}
egui_extras = { version = "0.25.0", features = ["image", "syntect"] }
egui_plot = { version = "0.25.0" }
eframe = { version = "0.25.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
image = { version = "0.24.7", optional = true, default-features = false, features = [
    "jpeg",
    "png",
] }
egui-toast = "0.11.0"
egui_json_tree = "0.3.0"
egui_code_editor = "0.2.1"

rfd = { version = "0.13" }
log4rs = '1.2.0'
rustygit = "0.5.0"
# workspace
netpurr_core = { path = "./../netpurr_core" }
anyhow.workspace = true
log.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
rand.workspace = true
url.workspace = true
regex.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
poll-promise.workspace = true

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
