[package]
name = "netpurr"
version = "1.0.0"
description = "This is a rest api request tools"
authors = ["Emil <jincheng.zhang@thoughtworks.com>"]
edition.workspace = true
rust-version.workspace = true
default-run = "netpurr"

[package.metadata.bundle]
name = "Netpurr"
identifier = "com.thoughtworks.netpurr"
icon = ["icon/icon256.png"]


[package.metadata.docs.rs]
all-features = true

[features]
default = ["glow", "http", "image_viewer"]
# image_viewer adds about 0.9 MB of WASM
http = ["image", "egui_extras/image"]
image_viewer = ["image", "egui_extras/all_loaders"]
glow = ["eframe/glow"]

[dependencies]
image = { version = "0.25.0", optional = true, default-features = false, features = [
    "jpeg",
    "png",
] }
egui_json_tree = { path = "./../egui_json_tree" }
egui_code_editor = { path = "./../egui_code_editor", features = ["egui"] }
egui-toast = { path = "./../egui-toast" }
rfd = { version = "0.14.1" }
log4rs = '1.2.0'
rustygit = "0.5.0"
netpurr_core = { path = "./../netpurr_core" }
# workspace
egui.workspace = true
egui_plot.workspace = true
egui_extras.workspace = true
eframe.workspace = true
anyhow.workspace = true
log.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
strum.workspace = true
strum_macros.workspace = true
rand.workspace = true
url.workspace = true
regex.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
poll-promise.workspace = true
futures-util.workspace = true

openapiv3 = "2.0.0"
[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
