[package]
name = "netpurr_core"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest_cookie_store = { path = "./../reqwest_cookie_store" }
cookie_store = { path = "./../cookie_store" }

serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
strum.workspace = true
strum_macros.workspace = true
anyhow.workspace = true
rand.workspace = true
base64.workspace = true
log.workspace = true
regex.workspace = true
dirs.workspace = true
uuid.workspace = true
chrono.workspace = true
url.workspace = true
poll-promise.workspace = true
tokio.workspace = true
rayon.workspace = true
deno_core = { version = "0.245.0" }
# http
reqwest = { version = "0.11.23", features = ["default-tls", "trust-dns", "blocking", "cookies", "json", "multipart", "gzip", "brotli", "deflate", "stream"] }
# websocket
tokio-tungstenite = { version = "0.21.0" }
mime_guess = "2.0.4"
openapiv3 = "2.0.0"
tokio-util = "0.7.10"
async-recursion = "1.0.5"
