[package]
name = "netpurr_test_runner"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netpurr_core = { path = "./../netpurr_core" }
clap = { version = "4.4", features = ["derive"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.11.23", features = ["default-tls", "trust-dns", "blocking", "cookies", "json", "multipart", "gzip", "brotli", "deflate", "stream"] }
